# cs2-discord-scrimbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml  rust.yml
src/: bot_service.rs  commands.rs  commands_old.rs  dathost.rs  main.rs  utils.rs
src/commands/: admin.rs  maps.rs  mod.rs  queue.rs  start.rs  stats.rs  steamid.rs  teamname.rs
