[package]
name = "csgo-discord-scrimbot"
version = "0.14.2"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serenity = "0.10.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
async-std = "1.6.3"
rand = "0.7.3"
regex = "1.3.9"
chrono = "0.4"
