[package]
name = "csgo-discord-scrimbot"
version = "0.3.0"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
async-std = "1.6.3"
rand = "0.7.3"
regex = "1.3.9"
base64 = "0.13.0"
poise = { version = "0.5.1", default-features = false, features = ["collector", "time", "cache"] }
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend", "utils", "model"] }
anyhow = "1.0.66"
chrono = "*"
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "*"
futures = "0.3.28"
